feat: Implement double opt-in registration flow with confirmation emails and update related templates

--- a/cigionline/static/pages/event_page/css/event_page.scss
+++ b/cigionline/static/pages/event_page/css/event_page.scss
@@ -55,6 +55,11 @@
     }
   }
 }
+
+.event-registration-form-section {
+  margin-top: 6rem;
+}
+
 .registration-banner-image {
   margin-bottom: 3rem;
 }
