feat: Adjust registration form styling and enhance smooth-scroll functionality for better user experience

--- a/cigionline/static/pages/event_page/css/event_page.scss
+++ b/cigionline/static/pages/event_page/css/event_page.scss
@@ -57,7 +57,15 @@
 }
 
 .event-registration-form-section {
-  margin-top: 6rem;
+  margin-top: 4rem;
+
+  .list-group {
+    .list-group-item {
+      .gap-2 {
+        gap: 0.5rem;
+      }
+    }
+  }
 }
 
 .registration-banner-image {
