--- a/templates/events/registration_result.html
+++ b/templates/events/registration_result.html
@@ -3,6 +3,9 @@
 {% block extra_css %}
   {% render_bundle 'eventPage' 'css' %}
 {% endblock %}
+{% block extra_js %}
+  {% render_bundle 'eventPage' 'js' %}
+{% endblock %}
 {% block content %}
 {% include "includes/heroes/hero_event.html" with topics=event.topics_sorted title=event.title date=event.publishing_date end_date=event.event_end event_type=event.get_event_type_display event_access=event.get_event_access_display authors=event.authors.all author_count=event.author_count registration_url=event.registration_url time_zone=event.time_zone time_zone_label=event.time_zone_label is_past=event.is_past %}
 
@@ -19,7 +22,7 @@
 
       <h1>Registration submitted</h1>
 
-      <div class="alert {% if status == 'pending' %}alert-warning{% else %}alert-success{% endif %}" role="alert">
+      <div id="registration-action-required" class="alert {% if status == 'pending' %}alert-warning{% else %}alert-success{% endif %}" role="alert">
         {% if status == "pending" %}
           <strong>Action required:</strong>
           Please check your email and click the confirmation link to finalize your registration.
