--- a/templates/events/registration_form.html
+++ b/templates/events/registration_form.html
@@ -25,7 +25,7 @@
         <p class="text-muted mb-4">Registration type: {{ reg_type.name }}</p>
 
 
-        <p class="text-muted mb-4">If you wish to modify or cancel your registration, you can do so from your original confirmation. Re-entering your information here will send you another confirmation which will also allow you to modify or cancel your registration.</p>
+        <p class="text-muted mb-4">If you wish to modify or cancel your registration, you can do so from your confirmation email. Re-entering your information here will send you another confirmation email which will also allow you to modify or cancel your registration.</p>
   
         {% if messages %}
           {% for message in messages %}
