CIGI-1095: Implement events registration (#2968)
* Add event registration models

* Add panels and models

* Use custom tab and fix migrations

* fix migrations

* Add templates

* Fix admin panels not working

* Update form logic

* Update hooks

* Add file upload, fix fields errors, add report button

* Fix invite issues

* Fix report

* Add styling

* add new admin views

* hide registration button if not open

* use wagtail docs instead of fileupload

* Add answers to registrant report

* Add conditional field

* Update templates

* Add banner image

* Disable 2fa

* Use registration templates

* Fix clean issue

* Styling updates

* Modify admin interface

* Add new field type and improve editor experience

* implement email templates

* Implement more complex email templates

* Add self-service registration management features and update email templates

* Improve registration management page layout and styling

* Enhance EmailTemplate model with preview support and update EmailTemplateViewSet to display titles as links

* Add EmailCampaign model and management command for sending scheduled emails

* Implement duplicate registration handling and update registration result messaging

* Add registrant answers block to email templates

* Add email template overrides to RegistrationType model and enhance email merge variables

* Add email handling for duplicate registrations and update registration form messaging

* update duplicate confirmation template to include answers and fix manage template missing fields

* Implement multiple registrations

* Refactor registration handling to ensure atomic transactions for group and individual registrations, preventing orphaned records and improving error handling.

* Refactor conditional handling in event registration forms for improved clarity and maintainability; enhance template compatibility for Django.

* Add option to register without an invite and update templates accordingly

* Add group registrant answers renderin

--- a/templates/events/event_page.html
+++ b/templates/events/event_page.html
@@ -68,6 +68,22 @@
     </section>
   {% endif %}
 
+  {% if self.registration_open and not self.is_private_registration or self.registration_open and invite %}
+    <section>
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col col-md-10 col-lg-8">
+            <a href="{{ self.url }}register/">
+              <button class="register btn btn-primary btn-lg mb-4">
+                Register
+              </button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+  {% endif %}
+
   {% include "includes/body.html" with body=self.body %}
 
   {% if self.author_count > 0 %}
