--- a/cigionline/static/css/admin.css
+++ b/cigionline/static/css/admin.css
@@ -55,3 +55,52 @@
   width: 80%;
   fill: white;
 }
+
+.registration-reports-header .title {
+  color: #c8c8c8;
+}
+
+.registration-reports-body .title .help-block {
+  color: #c8c8c8;
+}
+
+.registration-reports-body .column-view .button {
+  padding: 0.5em;
+  height: auto;
+}
+
+.registration-types-report-header .help-block {
+  color: #c8c8c8;
+  margin-bottom: 0.5em;
+}
+
+.registration-types-report-header .registration-types-report-nav {
+  display: flex;
+  gap: 0.5em;
+  margin-bottom: 2rem;
+}
+
+.registration-types-report-header .registration-types-report-nav .button {
+  padding: 0.5em;
+  height: auto;
+}
+
+.registration-registrants-report-section .x-scroll {
+  overflow-x: auto;
+}
+
+.registration-registrants-report-section td.actions a {
+  margin-bottom: 0.5rem;
+}
+
+.registration-registrants-report-section table.listing.full-width {
+  margin-bottom: 0;
+}
+
+.registration-reports-body .title .title-wrapper {
+  font-size: 1.25rem;
+}
+
+.registration-reports-body .title .buttons {
+  margin-top: 1rem;
+}
