--- a/cigionline/static/pages/policy_popup_group_page/css/policy_popup_group_page.scss
+++ b/cigionline/static/pages/policy_popup_group_page/css/policy_popup_group_page.scss
@@ -142,13 +142,13 @@ section {
           &::before {
             content: counter(collapsible-counter) '.';
             flex-shrink: 0;
-            font-size: 1.5rem;
+            font-size: 1.2rem;
             font-weight: 400;
             line-height: 1.2;
           }
 
           .toggle-expand {
-            font-size: 1.5rem;
+            font-size: 1.2em;
             margin-top: 0;
           }
         }
