--- a/templates/policy_popup/policy_popup_group_page.html
+++ b/templates/policy_popup/policy_popup_group_page.html
@@ -70,6 +70,12 @@
               {% include_block block %}
             {% endif %}
           {% endfor %}
+          {% if self.footnotes %}
+            <div class="footnotes">
+              <h2>Footnotes</h2>
+              {{ self.footnotes|richtext }}
+            </div>
+          {% endif %}
         </div>
         <div class="d-none d-lg-flex col-lg-3">
           <nav class="section-nav">
@@ -80,19 +86,7 @@
       </div>
     </div>
   </section>
-  {% if self.footnotes %}
-    <section class="article-footnotes">
-      <div class="container">
-        <div class="row">
-          <div class="col col-md-10 offset-md-1 col-lg-8 offset-lg-1">
-            <div class="footnotes">
-              {{ self.footnotes|richtext }}
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-  {% endif %}
+
 {% endblock %}
 
 {% block extra_js %}
