Add word-break styling for footnote links to improve text wrapping

--- a/cigionline/static/pages/policy_popup_group_page/css/policy_popup_group_page.scss
+++ b/cigionline/static/pages/policy_popup_group_page/css/policy_popup_group_page.scss
@@ -212,8 +212,12 @@ section {
           }
         }
       }
+    }
 
-
+    .footnotes {
+      a {
+        word-break: break-word;
+      }
     }
   }
 }
