--- a/cigionline/static/pages/policy_popup_group_page/css/policy_popup_group_page.scss
+++ b/cigionline/static/pages/policy_popup_group_page/css/policy_popup_group_page.scss
@@ -189,6 +189,7 @@ section {
         }
 
         .bordered-content-block {
+          margin: 1rem 0;
           h4 {
             text-align: center;
             text-transform: none;
